objects/Related_Opportunities__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Related_Opportunity__r.Account.Id ,  Related_Opportunity__r.Account.Name)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>TEXT( MONTH(Related_Opportunity__r.CloseDate)) + &quot;/&quot; + TEXT(DAY(Related_Opportunity__r.CloseDate)) + &quot;/&quot; + TEXT(YEAR(Related_Opportunity__r.CloseDate))</formula>
        <label>Close Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Related_Opportunity__r.Account_Shipping_Country__c</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <formula>Text(Related_Opportunity__r.ForecastCategoryName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPFS_Needed_flag__c</fullName>
        <formula>if(Related_Opportunity__r.HPFS_Needed__c,&quot;Checked&quot;,&quot;Unchecked&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPFS_Needed_flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Related_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Related_Opportunity__r.OwnerId,    Related_Opportunity__r.Owner__r.FirstName + &quot; &quot; + Related_Opportunity__r.Owner__r.LastName)</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Business_Group__c</fullName>
        <formula>Related_Opportunity__r.Business_Group2__c</formula>
        <label>Owner&apos;s Business Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>Related_Opportunity__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities (Junction Lookup)</relationshipLabel>
        <relationshipName>Related_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <formula>TEXT(Related_Opportunity__r.StageName)</formula>
        <label>Sales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value__c</fullName>
        <formula>Related_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Related Opportunities</label>
    <nameField>
        <displayFormat>RO-{000000}</displayFormat>
        <label>Related Opportunities ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>